{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 77,
  "lineage": "40150cce-c587-ba50-f74c-db86b633221a",
  "resources": [
    {
      "module": "module.sid23network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "secgroup23",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group/sg-03f810dac06aa9339",
            "description": "web server traffic allowed ssh \u0026 http",
            "egress": [],
            "id": "sg-03f810dac06aa9339",
            "ingress": [],
            "name": "mysecgrp",
            "name_prefix": "",
            "owner_id": "737795138174",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dde8b66a3f60b58b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sid23network.aws_vpc.sidvpc23"
          ]
        }
      ]
    },
    {
      "module": "module.sid23network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet_db_23",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:subnet/subnet-07d979e2f77955fe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.107.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d979e2f77955fe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737795138174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dbsnet-dev"
            },
            "tags_all": {
              "Name": "dbsnet-dev"
            },
            "vpc_id": "vpc-0dde8b66a3f60b58b"
          },
          "dependencies": [
            "module.sid23network.aws_vpc.sidvpc23"
          ]
        }
      ]
    },
    {
      "module": "module.sid23network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "snet_web_23",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:subnet/subnet-04f9390c526ddb175",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.108.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f9390c526ddb175",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "737795138174",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wsnet-dev"
            },
            "tags_all": {
              "Name": "wsnet-dev"
            },
            "vpc_id": "vpc-0dde8b66a3f60b58b"
          },
          "dependencies": [
            "module.sid23network.aws_vpc.sidvpc23"
          ]
        }
      ]
    },
    {
      "module": "module.sid23network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sidvpc23",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:vpc/vpc-0dde8b66a3f60b58b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0115c6a129abdf49f",
            "default_route_table_id": "rtb-0885c18475a5102ed",
            "default_security_group_id": "sg-03df23ebb998584f7",
            "dhcp_options_id": "dopt-0659f97c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dde8b66a3f60b58b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0885c18475a5102ed",
            "owner_id": "737795138174",
            "tags": {
              "Name": "sid-vpc-23"
            },
            "tags_all": {
              "Name": "sid-vpc-23"
            }
          }
        }
      ]
    },
    {
      "module": "module.sid23network",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sid-egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-02981f42315945c89",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02981f42315945c89",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03f810dac06aa9339",
            "security_group_rule_id": "sgr-02981f42315945c89",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sid23network.aws_security_group.secgroup23",
            "module.sid23network.aws_vpc.sidvpc23"
          ]
        }
      ]
    },
    {
      "module": "module.sid23network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sid-ingress-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-0b2177a51900adaaf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b2177a51900adaaf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03f810dac06aa9339",
            "security_group_rule_id": "sgr-0b2177a51900adaaf",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sid23network.aws_security_group.secgroup23",
            "module.sid23network.aws_vpc.sidvpc23"
          ]
        }
      ]
    },
    {
      "module": "module.sid23network",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sid-ingress-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:737795138174:security-group-rule/sgr-0fb69c7fa3cced69b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0fb69c7fa3cced69b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03f810dac06aa9339",
            "security_group_rule_id": "sgr-0fb69c7fa3cced69b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sid23network.aws_security_group.secgroup23",
            "module.sid23network.aws_vpc.sidvpc23"
          ]
        }
      ]
    },
    {
      "module": "module.sid23vm",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sid_instance23",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:737795138174:instance/i-0e97ae78cd4ac9424",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e97ae78cd4ac9424",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2-sid-23-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c78b124b4a285fa",
            "private_dns": "ip-10-0-108-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.108.31",
            "public_ip": "35.175.125.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f74b8b0c4aae6435",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f9390c526ddb175",
            "tags": {
              "Name": "sid-dev-23"
            },
            "tags_all": {
              "Name": "sid-dev-23"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03df23ebb998584f7"
            ]
          },
          "dependencies": [
            "module.sid23network.aws_subnet.snet_web_23",
            "module.sid23network.aws_vpc.sidvpc23"
          ]
        }
      ]
    }
  ]
}